--- a/configs/dnsmasq.conf
+++ b/configs/dnsmasq.conf
@@ -670,10 +670,10 @@
 # dhcp-mac=set:client_is_a_pi,B8:27:EB:*:*:*
 #dhcp-reply-delay=tag:client_is_a_pi,2
 
-interface=wlan0 # use interface wlan0
-listen-address=10.10.10.1 # Explicitly specify the address to listen on
-bind-interfaces 	  # Bind to the interface to make sure we aren't sending thingd elsewhere
-server=8.8.8.8		 # Forward DNS requests to Google DNS
-domain-needed		 # Don't forward short names
-bogus-priv		 # Never forward addresses in the non-routed address spaces.
-dhcp-range=10.10.10.50,10.10.10.55,12h # Assign IP Addresses  
+#interface=wlan0 # use interface wlan0
+#listen-address=10.10.10.1 # Explicitly specify the address to listen on
+#bind-interfaces 	  # Bind to the interface to make sure we aren't sending thingd elsewhere
+#server=8.8.8.8		 # Forward DNS requests to Google DNS
+#domain-needed		 # Don't forward short names
+#bogus-priv		 # Never forward addresses in the non-routed address spaces.
+#dhcp-range=10.10.10.50,10.10.10.55,12h # Assign IP Addresses  
